--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,6 +1,13 @@
 name = "linqem"
 compatibility_date = "2024-02-23"
 
+# If you are only using Pages + D1, you only need the below in your wrangler.toml to interact with D1 locally.
+[[d1_databases]]
+binding = "LINQEM_DB" # Should match preview_database_id
+database_name = "linqem"
+database_id = "3345e0ef-5385-462d-abaa-cd764dc837b7" # wrangler d1 info YOUR_DATABASE_NAME
+preview_database_id = "3345e0ef-5385-462d-abaa-cd764dc837b7" # Required for Pages local development
+
 # Variable bindings. These are arbitrary, plaintext strings (similar to environment variables)
 # Note: Use secrets to store sensitive data.
 # Docs: https://developers.cloudflare.com/workers/platform/environment-variables
