--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "build": "remix vite:build",
-    "deploy": "npm run build && wrangler pages deploy ./build/client",
+    "deploy": "npm run build && wrangler pages deploy ./build/client --project-name=linqem",
     "dev": "remix vite:dev",
     "lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
     "start": "wrangler pages dev ./build/client --d1 LINQEM_DB=3345e0ef-5385-462d-abaa-cd764dc837b7",
