--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@remix-run/cloudflare": "^2.7.2",
     "@remix-run/cloudflare-pages": "^2.7.2",
     "@remix-run/react": "^2.7.2",
+    "bcryptjs": "^2.4.3",
     "isbot": "^4.1.0",
     "miniflare": "^3.20231030.4",
     "react": "^18.2.0",
@@ -30,6 +31,7 @@
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20240222.0",
     "@remix-run/dev": "^2.7.2",
+    "@types/bcryptjs": "^2.4.6",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.7.4",
